# ngless

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  AUTHORS  CITATION.cff  CITATION.md  CLAUDE.md  CONTRIBUTING.md  COPYING  Cargo.toml  ChangeLog  Dockerfile  INSTALL.rst  Makefile  NGLess.cabal  NGLess.cabal.m4  README.md  README.rst  TODO.md  build-docker.sh  build-static-embedded-depencies.nix  package.yaml  pixi.toml  pixi_install_ngless.toml  release.nix  run-benchmarks.sh  run-tests-embedded.sh  run-tests.sh  rust-migration.md  shell.nix  sources-with-static-dependencies.nix  stack.yaml
.github/workflows/: build_linux.yml  build_macosx.yml  build_rust.yml  build_static_embedded_nix.yml  build_w_nix.yml  ngless_test.yml  test.yml
.travis/: add_O0_option.sh
Execs/: Bench.hs  Main.hs
Html/: afterQC.html  beforeQC.html  index.html  ngless.css  nglessEditor.html  nglessKeeper.css  nglessKeeper.html  nglessKeeperafterQC.html  nglessKeeperbeforeQC.html  nglessKeepervisualize.html  nglessMapStats.html  nglessQC.html  nglessScriptCreator.html  nglessWizard.html  perBaseQualScores.css
Html/forms/: form-annotate.html  form-count.html  form-end.html  form-load.html  form-map.html  form-preprocess.html  form-unique.html  form-write.html  form.html  style.css
Modules/: Makefile
Modules/example-cmd.ngm/: module.yaml
Modules/motus.ngm/: module.yaml  motus-summary.py  run-python.sh
NGLess/: .gitignore  Annotation.hs  Bench.hs  BuiltinFunctions.hs  ByteStringConversions.hs  CWL.hs  Citations.hs  CmdArgs.hs  Configuration.hs  CountOperation.hs  ExternalModules.hs  FPreProcess.hs  FastQFileData.hs  FastQStatistics.hs  FileManagement.hs  FileOrStream.hs  Functions.hs  Hooks.hs  Interpret.hs  InvokeExternalProgs.hs  JSONManager.hs  JSONScript.hs  Language.hs  Main.hs  Makefile  MapInterpretOperation.hs  Modules.hs  NGLess.cabal  NGLess.hs  Network.hs  NumberOfChars.hs  Output.hs  Parse.hs  PerBaseQualityScores.hs  PrintFastqBasicStats.hs  ProcessFastQ.hs  ProgressBar.hs  README.md  ReferenceDatabases.hs  SamBamOperations.hs  (+14 more)
NGLess/Bench/: Bench.hs
NGLess/BuiltinModules/: Argv.hs  AsReads.hs  Assemble.hs  Checks.hs  LoadDirectory.hs  ORFFind.hs  QCStats.hs  Readlines.hs  Remove.hs  Samples.hs
NGLess/Data/: AnnotRes.hs  Annotation.hs  DefaultValues.hs  FastQ.c  FastQ.hs  FastQStatistics.hs  Fasta.hs  GFF.hs  Json.hs  Sam.hs
NGLess/Dependencies/: Embedded.hs  Versions.hs  embedded.c
NGLess/FileOrStream/: Types.hs
NGLess/Html/: afterQC.html  beforeQC.html  index.html  nglessKeeper.css  nglessKeeper.html  nglessKeeperafterQC.html  nglessKeeperbeforeQC.html  perBaseQualScores.css  perBaseQualityScores.js
NGLess/Interpretation/: Annotation.hs  Count.hs  CountFile.hs  FastQ.hs  LowMemory.hs  Map.hs  Reads.hs  Select.hs  Substrim.hs  Unique.hs  Write.hs
NGLess/NGLess/: NGError.hs  NGLEnvironment.hs
NGLess/StandardModules/: Batch.hs  Checkpoint.hs  Example.hs  Minimap2.hs  Mocat.hs  Motus.hs  NGLStdlib.hs  Parallel.hs  Samtools.hs  Soap.hs
NGLess/Tests/: Annotation.hs  Count.hs  FastQ.hs  IntGroups.hs  NGLessAPI.hs  Parse.hs  Select.hs  Types.hs  Utils.hs  Validation.hs  Vector.hs  Write.hs
NGLess/Utils/: Batch.hs  Bwa.hs  Conduit.hs  Debug.hs  Embed.hs  FindModules.hs  Here.hs  IntGroups.hs  LockFile.hs  Network.hs  Process.hs  ProgressBar.hs  Samtools.hs  StringLike.hs  Suggestion.hs  Tempfile.hs  Utils.hs  Vector.hs
Tests-Src/: Tests.hs
Tests-Src/Tests/: Count.hs  FastQ.hs  IntGroups.hs  Language.hs  LoadFQDirectory.hs  NGLessAPI.hs  Parse.hs  Samples.hs  Select.hs  Types.hs  Utils.hs  Validation.hs  Vector.hs  Write.hs
build-scripts/: 0001-Fix-undefined-behavior-causing-behavior.patch  build-docker.sh  build-using-haskell-nix.sh  check-materialization.sh  create-standard-packs.py  create-tara-short-demo.sh  docker.nix  megahit-1.1.1.patch  minimap2-static-compile.patch  ngless-static-embed-dependencies.nix  ngless.py  read-version.sh  set-embed.patch  shell-static.nix  sources-with-static-dependencies.nix  update-materialized.sh
build-scripts/docker_bases/: build_upload_all.sh
build-scripts/release.materialized/: .stack-to-nix.cache  .stack-to-nix.cache.0  NGLess.nix  default.nix
build-scripts/sources-with-static-dependencies.materialized/: .stack-to-nix.cache.0  NGLess.nix  default.nix
docs/: structure.rst
docs/contents/: Documents.rst  Functions.rst  GettingStarted.rst  Installation.rst  Introduction.rst  Language.rst  Organisms.rst  Tests.rst  Visualization.rst  advanced.md  conf.py  configuration.rst  default.nix  faq.md  index.md  (+9 more)
examples/: annotation.ngl  basic0-with-types.ngl  basic0.ngl  completeExample.ngl  map.ngl  mapDefaultGenome.ngl  motus.ngl  oneLiner.hs  oneLiner.ngl  preProcess.ngl  readFastQ.ngl  unique.ngl
nix/: default.nix  jailbreak-workaround.patch  ngless.nix
rust/: Cargo.toml  README.md
rust/ngless/: Cargo.toml
rust/ngless/src/: lib.rs  main.rs
samples/: sample.fq
scripts/: README_cwl  create-standard-packs.py  create-standard-packs.sh  make_cwl.sh  ngless-count.cwl  ngless-count.py  ngless-map.cwl  ngless-map.py  ngless-mapstats.cwl  ngless-mapstats.py  ngless-select.cwl  ngless-select.py  ngless-trim.cwl  ngless-trim.py  ngless-unique.cwl  ngless-unique.py  ngless_wrap.py
scriptsDS/: installDS.sh  installOneDS.sh
specification/: .gitignore  functions.rst  language.rst  specification.rst  specification.tex
src/: ast.rs  batch.rs  citations.rs  cleanup.rs  cli.rs  compression.rs  configuration.rs  count.rs  errors.rs  export.rs  external_modules.rs  fastq.rs  gff.rs  interpret.rs  lib.rs  lockfile.rs  mapper.rs  minimap2.rs  modules.rs  output.rs  parallel.rs  parser.rs  progress.rs  reference.rs  report.rs  sam.rs  samtools.rs  select.rs  suggestion.rs  tempfiles.rs  tokens.rs  transform.rs  types.rs  validation.rs  values.rs
test_samples/: .gitignore  data_set_repeated.fq  nonempty_diff.gtf  nonempty_diff.sam  res_json_statistics.txt  sample-multichunk-bzip2.fq.bz2  sample.fq.bz2  sample_low_qual.fq  sample_small.fq  short.gtf  very_short.gtf  very_short.sam
tests/: .gitignore  README.md
(+589 files in other folders)
