[package]
name = "ngless"
version = "1.5.0"
edition = "2021"
description = "NGLess: NGS processing with Less work — Rust reimplementation (work in progress)"
license = "MIT"
repository = "https://github.com/ngless-toolkit/ngless"

# Sources live at the repository root (src/lib.rs, src/main.rs) and are auto-detected;
# the binary inherits the package name `ngless`.

[dependencies]
bzip2 = "0.6.1"
# Transparent gzip read/write for FASTQ (`.fq.gz`). bzip2/zstd support arrives later.
flate2 = "1"
zstd = "0.13.3"
# YAML parsing for sample manifests (`load_sample_list`) and, later, external modules.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Reference-database auto-download: HTTP(S) client + tar extraction (mirrors
# `Utils.Network`/`ReferenceDatabases.hs`). gzip decompression reuses `flate2` above.
ureq = "2"
tar = "0.4"

[workspace]
# The root package is the workspace root. As the rewrite grows, factor subsystems into
# member crates here, e.g.:
#   members = ["crates/ngless-parser", "crates/ngless-types", "crates/ngless-runtime"]
