[package]
name = "ngless"
version = "1.6.0-beta2"
edition = "2021"
description = "NGLess: NGS processing with Less work — a domain-specific language for next-generation sequencing data"
license = "MIT"
repository = "https://github.com/ngless-toolkit/ngless"

# Sources live at the repository root (src/lib.rs, src/main.rs) and are auto-detected;
# the binary inherits the package name `ngless`.

[dependencies]
bzip2 = "0.6.1"
# Transparent gzip read/write for FASTQ (`.fq.gz`). bzip2/zstd support arrives later.
flate2 = "1"
zstd = "0.13.3"
# xz/lzma (`.xz`) transparent read/write, matching Haskell's XZCompression. The `static`
# feature vendors and compiles liblzma from source instead of linking the system copy via
# pkg-config; the latter injects `-L /usr/lib/x86_64-linux-gnu` into the link line, which
# pulls in the host glibc and breaks the conda/`pixi build` link against the older sysroot.
xz2 = { version = "0.1", features = ["static"] }
# YAML parsing for sample manifests (`load_sample_list`) and, later, external modules.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# JSON serialisation for `--export-json` (mirrors `JSONScript.hs`, which uses aeson).
serde_json = "1"
# Reference-database auto-download: HTTP(S) client + tar extraction (mirrors
# `Utils.Network`/`ReferenceDatabases.hs`). gzip decompression reuses `flate2` above.
ureq = "2"
tar = "0.4"

# Unix signal handling so an interrupted run (Ctrl+C / SIGTERM) still removes its lock and
# temporary files (see `src/cleanup.rs`).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[workspace]
# The root package is the workspace root. As the rewrite grows, factor subsystems into
# member crates here, e.g.:
#   members = ["crates/ngless-parser", "crates/ngless-types", "crates/ngless-runtime"]
