name:                NGLess
version:             0.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        COPYING
author:              Luis Pedro Coelho and Paulo Monteiro
maintainer:          luis@luispedro.org
-- copyright:
category:            Domain Specific Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18.0.3

executable ngless
  main-is: Main.hs
  ghc-options: -Wall -fwarn-tabs -fno-warn-missing-signatures -threaded -O2
  -- other-modules:
  C-sources: NGLess/Dependencies/embedded.c
  default-extensions:  BangPatterns, OverloadedStrings
  other-extensions:    DeriveDataTypeable, TemplateHaskell
  build-depends:
    aeson == 0.9.*,
    ansi-terminal == 0.6.*,
    attoparsec == 0.13.*,
    base,
    bytestring == 0.10.*,
    cmdargs == 0.10.*,
    conduit >= 1.2 && < 1.3,
    conduit-extra >= 1.1 && < 1.2,
    containers,
    convertible,
    deepseq,
    directory,
    filepath,
    file-embed,
    hashable,
    hashtables == 1.2.*,
    -- happy >= 1.17,
    http-conduit >= 2.0,
    IntervalMap >= 0.4 && < 0.5,
    mtl,
    MissingH == 1.3.*,
    old-time,
    parsec,
    process,
    random == 1.1.*,
    resourcet >= 1.1 && < 1.2,
    tar,
    template-haskell,
    text,
    time,
    transformers == 0.4.*,
    unix,
    vector,
    zlib == 0.6.*
  hs-source-dirs: NGLess/
  default-language:    Haskell2010

Test-Suite nglesstest
  type:         exitcode-stdio-1.0
  main-is:      Tests.hs
  ghc-options:  -Wall -fwarn-tabs -fno-warn-missing-signatures -threaded -O2
  -- other-modules:
  C-sources: NGLess/Dependencies/embedded.c
  default-extensions:  BangPatterns, OverloadedStrings
  other-extensions:    DeriveDataTypeable, TupleSections, TemplateHaskell
  build-depends:
    aeson == 0.9.*,
    ansi-terminal == 0.6.*,
    attoparsec == 0.13.*,
    base,
    bytestring == 0.10.*,
    cmdargs == 0.10.*,
    conduit >= 1.2 && < 1.3,
    conduit-extra >= 1.1 && < 1.2,
    containers,
    convertible,
    deepseq,
    directory,
    filepath,
    file-embed,
    hashable,
    hashtables == 1.2.*,
    http-conduit >= 2.0,
    -- happy >= 1.17,
    HUnit,
    IntervalMap >= 0.4 && < 0.5,
    MissingH == 1.3.*,
    mtl,
    old-time,
    parsec,
    process,
    random == 1.1.*,
    resourcet >= 1.1 && < 1.2,
    streaming-commons >= 0.1.12,
    tar,
    template-haskell,
    test-framework == 0.8.*,
    test-framework-hunit,
    test-framework-quickcheck2,
    test-framework-th,
    text,
    time,
    transformers == 0.4.*,
    unix,
    vector,
    zlib == 0.6.*
  hs-source-dirs: NGLess/
  default-language:    Haskell2010
