name:                NGLess
version:             0.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        COPYING
author:              Luis Pedro Coelho and Paulo Monteiro
maintainer:          luis@luispedro.org
-- copyright:
category:            Domain Specific Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18.0.3

executable ngless
  main-is: Main.hs
  ghc-options: -Wall -fwarn-tabs -fno-warn-missing-signatures -threaded -O2
  -- other-modules:
  C-sources: NGLess/Dependencies/embedded.c
  default-extensions:  BangPatterns, OverloadedStrings
  other-extensions:    DeriveDataTypeable, TemplateHaskell
  build-depends:
    aeson == 0.9.*,
    ansi-terminal == 0.6.*,
    base,
    bytestring == 0.10.*,
    cmdargs == 0.10.*,
    conduit >= 1.2 && < 1.3,
    conduit-extra >= 1.1 && < 1.2,
    conduit-combinators == 1.0.*,
    configurator == 0.3.*,
    containers == 0.5.*,
    convertible == 1.1.*,
    -- HUnit (v 1.2.5) required deepseq 1.3
    deepseq == 1.3.*,
    directory == 1.2.*,
    -- MissingH (v1.3) asks for filepath 1.3
    filepath == 1.3.*,
    file-embed == 0.0.8.*,
    hashable == 1.2.*,
    hashtables == 1.2.*,
    -- happy >= 1.17,
    http-conduit >= 2.0,
    IntervalMap >= 0.4 && < 0.5,
    mtl == 2.2.*,
    MissingH == 1.3.*,
    parsec == 3.1.*,
    primitive == 0.6.*,
    process == 1.2.* && >= 1.2.3,
    random == 1.1.*,
    stm-conduit == 2.6.*,
    resourcet >= 1.1 && < 1.2,
    tar == 0.4.2.*,
    template-haskell,
    text == 1.2.*,
    time == 1.4.*,
    -- needed until we can update time to 1.5
    old-locale == 1.0.*,
    transformers == 0.4.*,
    unix == 2.7.*,
    -- aeson (v0.9.0.1) requires vector 0.10
    vector == 0.10.*,
    yaml,
    zlib == 0.6.*
  hs-source-dirs: NGLess/
  default-language:    Haskell2010

Test-Suite nglesstest
  type:         exitcode-stdio-1.0
  main-is:      Tests.hs
  ghc-options:  -Wall -fwarn-tabs -fno-warn-missing-signatures -threaded -O2
  -- other-modules:
  C-sources: NGLess/Dependencies/embedded.c
  default-extensions:  BangPatterns, OverloadedStrings
  other-extensions:    DeriveDataTypeable, TupleSections, TemplateHaskell
  build-depends:
    aeson == 0.9.*,
    ansi-terminal == 0.6.*,
    base,
    bytestring == 0.10.*,
    cmdargs == 0.10.*,
    conduit >= 1.2 && < 1.3,
    conduit-extra >= 1.1 && < 1.2,
    conduit-combinators == 1.0.*,
    configurator == 0.3.*,
    containers == 0.5.*,
    convertible == 1.1.*,
    -- HUnit (v 1.2.5) required deepseq 1.3
    deepseq == 1.3.*,
    directory == 1.2.*,
    -- MissingH (v1.3) asks for filepath 1.3
    filepath == 1.3.*,
    file-embed == 0.0.8.*,
    hashable == 1.2.*,
    hashtables == 1.2.*,
    http-conduit >= 2.0,
    -- happy >= 1.17,
    HUnit == 1.2.*,
    IntervalMap >= 0.4 && < 0.5,
    MissingH == 1.3.*,
    mtl == 2.2.*,
    parsec == 3.1.*,
    primitive == 0.6.*,
    process == 1.2.*,
    random == 1.1.*,
    resourcet >= 1.1 && < 1.2,
    stm-conduit == 2.6.*,
    streaming-commons >= 0.1.12,
    tar == 0.4.2.*,
    template-haskell,
    test-framework == 0.8.*,
    test-framework-hunit,
    test-framework-quickcheck2,
    test-framework-th,
    text == 1.2.*,
    time == 1.4.*,
    -- needed until we can update time to 1.5
    old-locale == 1.0.*,
    transformers == 0.4.*,
    unix == 2.7.*,
    -- aeson (v0.9.0.1) requires vector 0.10
    vector == 0.10.*,
    yaml,
    zlib == 0.6.*
  hs-source-dirs: NGLess/
  default-language:    Haskell2010
