[package]
name = "ngless"
version = "1.5.0"
edition = "2021"
description = "NGLess: NGS processing with Less work — Rust reimplementation (work in progress)"
license = "MIT"
repository = "https://github.com/ngless-toolkit/ngless"

[lib]
name = "ngless"
path = "src/lib.rs"

[[bin]]
name = "ngless"
path = "src/main.rs"
